--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="views/services-partners.html"><strong>Nuestros servicios y socios</strong></a>
+              <a class="nav-link blue" href="views/services-partners.html"><strong>Nuestros servicios y socio</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link blue" href="#contact-us"><strong>Contáctenos</strong></a>
