--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul class="navbar-nav ml-auto  padding-top-header-ul content-box">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <strong>Sobre Gib-Solutions</strong>
+                <strong>Sobre nosotros</strong>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class=" dropdown-item blue" href="#about-us"><strong>¿Quiénes somos?</strong></a>
@@ -89,7 +89,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <h1 class="center-align">Sobre Gib-Solutions</h1>
+            <h1 class="center-align">Sobre nosotros</h1>
             <hr class="hr-style-gib">
           </div>
         </div>
