--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Gib-Solutions</title>
     <!--Color de barra de navegación que sólo se verá en versión movile-->
     <meta name="theme-color" content="#343A40"/>
-    <!--Logo pequeño que estará ubciado en la pestaña-->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
+    <!--Logo pequeño que estará ubicado en la pestaña-->
     <link rel="icon" type="image/png" href="assets/images/logo-gs.png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
@@ -63,10 +63,10 @@
                   </div>
                 </div>
                 <div class="carousel-item height-85">
-                  <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="d-block w-100 img-fluid filter-image-responsive filter-img">
+                  <img src="assets/images/monitoreo3.jpg" alt="imagen 2" class="d-block w-100 img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption d-none d-md-block">
-                    <h2 class="text-shadow">¡Servimos con pasión!</h2>
-                    <h3 class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</h3>
+                    <h2 class="text-shadow">La herramienta de monitorización</h2>
+                    <h3 class="text-shadow">TODO-EN-UNO</h3>
                   </div>
                 </div>
               </div>
