--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <header class="header">
       <nav id="navbar" class="navbar navbar-light navbar-expand-lg nav-margin-btn-0 navbar-fixed-top padding-nav">
-        <a class="navbar-brand padding-0 logo-gib" href="index.html"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
+        <a class="navbar-brand padding-0 logo-gib" href="index.html"><img src="assets/images/gib.png" alt="Logo Gib-Solutions" class="img-fluid d-inline-block align-top" style="width:inherit; height:100%;"></a>
         <button class="navbar-toggler border-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +38,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="views/services-partners.html"><strong>Nuestros servicios y socio</strong></a>
+              <a class="nav-link blue" href="views/services-partners.html"><strong>Nuestros servicios y socios</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link blue" href="#contact-us"><strong>Contáctenos</strong></a>
@@ -54,7 +54,7 @@
       <div class="container-fluid">
         <div class="row"> <!--row-margin-0-->
           <div class="col-12 container-padding-0" style="padding: 0;">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
               <div class="carousel-inner">
                 <div class="carousel-item active height-85">
                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="d-block w-100 img-fluid filter-image-responsive filter-img">
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="carousel-item height-85">
-                  <img src="assets/images/monitoreo3.jpg" alt="imagen 2" class="d-block w-100 img-fluid filter-image-responsive filter-img">
+                  <img src="assets/images/pandora-slider.jpg" alt="imagen 2" class="d-block w-100 img-fluid filter-image-responsive filter-img">
                   <div class="carousel-caption d-none d-md-block">
                     <h2 class="text-shadow">La herramienta de monitorización</h2>
                     <h3 class="text-shadow">TODO-EN-UNO</h3>
