Cambiando imagen sección 2

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="flex zoom-effect-container">
               <div class="image-card">
                 <br>
-                <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-fluid image-about-gib">
+                <img src="assets/images/gibsol.png" alt="Monitoreo" class="img-fluid image-about-gib">
               </div>
             </div>
           </div>
